feat: make java can Run in selenium docker